--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -63,12 +63,12 @@
     <application
         android:name=".MainApp"
         android:icon="@mipmap/ic_launcher"
-        android:label="Nextcloud beta"
+        android:label="quarterfull"
         android:theme="@style/Theme.ownCloud.Toolbar"
         android:manageSpaceActivity="com.owncloud.android.ui.activity.ManageSpaceActivity">
         <activity
             android:name=".ui.activity.FileDisplayActivity"
-            android:label="Nextcloud beta"
+            android:label="quarterfull"
             android:theme="@style/Theme.ownCloud.Toolbar.Drawer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -82,7 +82,7 @@
         <activity android:name=".ui.activity.ReceiveExternalFilesActivity"
                   android:taskAffinity=""
                   android:excludeFromRecents="true"
-                  android:label="Nextcloud beta"
+                  android:label="quarterfull"
                   android:theme="@style/Theme.ownCloud.NoActionBar">
         <activity android:name=".ui.activity.LocalDirectorySelectorActivity" />
         <activity android:name=".ui.activity.StorageMigrationActivity" />
@@ -110,7 +110,7 @@
             android:theme="@style/Theme.ownCloud.Overlay" />
         <activity
             android:name=".ui.preview.PreviewVideoActivity"
-            android:label="Nextcloud beta"
+            android:label="quarterfull"
             android:theme="@style/Theme.ownCloud.Fullscreen" />
 
         <service
@@ -273,10 +273,10 @@
             android:label="Copy link" />
         <activity
             android:name=".ui.activity.FolderPickerActivity"
-            android:label="Nextcloud beta" />
+            android:label="quarterfull" />
         <activity
             android:name=".ui.activity.UploadPathActivity"
-            android:label="Nextcloud beta" />
+            android:label="quarterfull" />
         <activity
             android:name=".ui.activity.ShareActivity"
             android:label="Sharing"
